# tallying-joules

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  tj_analysis.ipynb  tj_analysis_scratchwork.ipynb  tj_extract_data.ipynb  tj_streamlit.py
data/: tj_clean.csv  tjhp_clean.csv
figures/: tj_calore_scatter.html
