[project]
name = "tallying-joules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "polars>=1.33.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
]
